# KnowledgeContextEngine

./: .dockerignore  .env.example  .gitignore  README.md  README.zh-CN.md  docker-compose.yml
.github/workflows/: ci.yml
apps/demo-chat/: .env.local.example  Dockerfile  package-lock.json  package.json  tsconfig.json
apps/demo-chat/components/: chat-shell.tsx  trace-panel.tsx
apps/demo-chat/lib/: chat-helpers.ts  chat-types.ts  demo-chat-config.ts  gateway-client.ts
data/demo-resources/: a-zhiguang-reply-tone-note.md  m-zhiguang-distributed-tracing-guide.md  n-zhiguang-message-queue-delivery-guide.md  o-zhiguang-search-indexing-guide.md  z-zhiguang-redis-cache-playbook.md
docs/session-handoffs/: 2026-04-26-core-contract-and-selection-check.md  2026-04-26-v1-acceptance-recheck.md  2026-04-26-v1-gap-closure-and-persistence.md  2026-04-27-runtime-resume-check.md  2026-04-27-test-isolation-and-next-steps.md
docs/superpowers/plans/: 2026-04-24-knowledge-context-engine-v1.md
scripts/: seed_demo_data.py  wait_for_http.py
services/engine-python/: Dockerfile  pyproject.toml
services/engine-python/app/: api.py  db.py  main.py  models.py  settings.py
services/engine-python/app/services/: memory.py  persistence.py  query.py  resource_nodes.py
services/engine-python/tests/: conftest.py  test_demo_story_e2e.py  test_health.py  test_memory_api.py  test_memory_channels.py  test_persistence_api.py  test_query_trace.py  test_resource_index_api.py  test_resource_nodes.py  test_schema_contract.py  test_trace_snapshots.py
services/gateway-java/: Dockerfile  pom.xml
(+22 files in other folders)
